--- a/synergy/mx/static/styl/colors.styl
+++ b/synergy/mx/static/styl/colors.styl
@@ -16,9 +16,9 @@ $color-15 = #ff8a65
 $color-16 = #ffffaa
 $color-17 = #d28aff
 
-$ui-color-1 = #006
+$ui-color-1 = #222
 $ui-color-2 = rgba(0, 204, 255, 1)
-$ui-color-3 = rgba(255,255,255,0.5)
+$ui-color-3 = rgba(255,255,255,0.3)
 $ui-color-4 = #669
 $ui-color-5 = #e8edff
 $ui-color-6 = #eff2ff
@@ -47,8 +47,9 @@ $bg-on = $color-3
 $bg-grid-header = $color-1
 
 $border-selected = $color-8
+$table-border = #888
 $border-next = $color-9
 $btn-border = $color-5
-$btn-border-hover = $color-3
+$btn-border-hover = $color-6
 $warning-icon = red
 
