--- a/synergy/mx/static/css/mx.css
+++ b/synergy/mx/static/css/mx.css
@@ -3,9 +3,10 @@
 }
 .grid-row {
   background-color: #f5f5f5;
+  background-size: cover;
   display: grid;
-  grid-gap: 0.75rem;
-  justify-content: space-between;
+  grid-gap: 1rem;
+  justify-content: left;
   margin: 1rem 0 3rem 0;
   padding: 1rem;
   height: 90vh;
@@ -14,10 +15,16 @@
   height: 100%;
 }
 .grid-row-tree_site {
-  grid-template-columns: auto repeat(4, 1fr);
+  grid-template-columns: min-content repeat(4, auto);
 }
 .grid-row-tree_client {
-  grid-template-columns: auto repeat(3, 1fr);
+  grid-template-columns: max-content repeat(3, auto);
+}
+.grid-row-tree_flow {
+  grid-template-columns: min-content auto;
+}
+.grid-row-tree_alert {
+  grid-template-columns: min-content auto;
 }
 .grid-header {
   background-color: $color-1;
@@ -28,7 +35,7 @@
 }
 .grid-header > div,
 .grid-info > div {
-  padding: 1rem;
+  padding: 2rem;
 }
 .grid-info {
   height: 100%;
@@ -40,22 +47,64 @@
 .grid-info >div:first-child {
   margin: 0;
 }
+.tile_component {
+  width: 100%;
+  display: inline-flex;
+  justify-content: space-between;
+}
+.tile_component .checkbox {
+  align-self: right;
+}
+.button,
+button,
+input[type="submit"],
+input[type="reset"],
+input[type="button"] {
+  display: inline-block;
+  height: 38px;
+  padding: 0 30px;
+  text-align: center;
+  font-weight: 600;
+  line-height: 38px;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  white-space: nowrap;
+  background-color: transparent;
+  border-radius: 4px;
+  cursor: pointer;
+  box-sizing: border-box;
+}
+.flex-buttons {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+}
 .action_button {
-  font-size: 0.9265rem;
+  font-size: 0.8rem;
   display: inline-block;
   min-width: 86px;
   padding: 0px 6px;
   text-align: left;
   margin: 2px;
-  border-color: $color-4;
+  border-color: $color-5;
+  text-transform: uppercase;
   opacity: 0.75;
 }
 .action_button i {
   padding: 0;
 }
 .action_button:hover {
-  border-color: $color-5;
+  border-color: $color-6;
   opacity: 1;
+}
+.action_button.auto-width {
+  min-width: 20px;
+}
+.action_button span {
+  margin-left: 0;
 }
 .action_toogle:hover {
   color: $color-2;
@@ -76,7 +125,7 @@
   margin: 0 0.42rem;
 }
 .header-tile-icons .state-warning {
-  color: #f00;
+  color: #bf360c;
 }
 .header-tile-info {
   margin-bottom: 0;
@@ -101,11 +150,11 @@ div.process_header_tile_off {
   height: 100%;
 }
 div.process_header_tile_on {
-  background-color: $color-3;
+  background-color: $color-4;
   height: 100%;
 }
 div.process_info_tile {
-  background: $color-6;
+  background: $color-7;
   overflow-x: scroll;
   width: 100%;
 }
@@ -117,53 +166,34 @@ div.table_layout_element:first-child {
   margin-right: 8px;
 }
 div.is_selected_timeperiod {
-  border: 4px solid $color-7;
-  box-sizing: content-box;
-}
-div.is_next_timeperiod {
   border: 4px solid $color-8;
 }
-div.state_embryo {
-  background-color: $color-9;
+div.is_next_timeperiod {
+  border: 4px solid $color-9;
 }
-div.state_embryo div {
-  color: $color-10;
+div.state_embryo {
+  background-color: $color-10;
 }
 div.state_in_progress {
-  background-color: $color-11;
-}
-div.state_in_progress div {
-  color: $color-10;
-}
-div.state_processed {
   background-color: $color-12;
 }
-div.state_processed div {
-  color: $color-10;
-}
-div.state_final_run {
+div.state_processed {
   background-color: $color-13;
 }
-div.state_final_run div {
-  color: $color-10;
-}
-div.state_skipped {
+div.state_final_run {
   background-color: $color-14;
 }
-div.state_skipped div {
-  color: $color-10;
-}
-div.state_skipped .action_button {
-  border-color: $color-4;
-}
-div.state_noop {
+div.state_skipped {
   background-color: $color-15;
 }
-div.state_noop div {
-  color: $color-10;
+div.state_skipped .action_button {
+  border-color: $color-6;
+}
+div.state_noop {
+  background-color: $color-16;
 }
 div.state_inconsistent {
-  background-color: $color-16;
+  background-color: $color-17;
 }
 div.state_inactive {
   background-color: #d3d3d3;
@@ -178,7 +208,7 @@ div.state_inactive {
 }
 .process-form button {
   height: 2.5rem;
-  border-color: $color-4;
+  border-color: $color-5;
   opacity: 0.75;
   padding: 0 6px;
   min-width: 4rem;
@@ -187,9 +217,25 @@ div.state_inactive {
   opacity: 0.8;
 }
 .process-form button:hover {
-  border-color: $color-5;
+  border-color: $color-6;
   opacity: 1;
 }
 .btn-center {
   text-align: center;
+}
+@media (max-width: 1280px) {
+  .grid-row div .action_button {
+    font-size: 1rem;
+    min-width: 40px;
+    display: inline-block;
+    padding: 0px 6px;
+    text-align: center;
+    margin: 2px;
+    border-color: $color-5;
+    text-transform: uppercase;
+    opacity: 0.75;
+  }
+  .grid-row div .action_button span {
+    display: none;
+  }
 }
