--- a/synergy/mx/static/styl/mx.styl
+++ b/synergy/mx/static/styl/mx.styl
@@ -1,199 +1,250 @@
 .grid-container
-    margin 2rem 4rem
+  margin 2rem 4rem
 
 .grid-row
-    background-color whitesmoke
-    display grid
-    grid-gap 0.75rem
-    justify-content space-between
-    margin 1rem 0 3rem 0
-    padding 1rem
-    height 90vh
+  background-color whitesmoke
+  background-size cover
+  display grid
+  grid-gap 1rem
+  justify-content left
+  margin 1rem 0 3rem 0
+  padding 1rem
+  height 90vh
 
-    .header
-        height 100%
+  .header
+    height 100%
 
 .grid-row-tree_site
-    grid-template-columns auto repeat(4, 1fr)
+  grid-template-columns min-content repeat(4, auto)
 
 .grid-row-tree_client
-    grid-template-columns auto repeat(3, 1fr)
+  grid-template-columns max-content repeat(3, auto)
+
+.grid-row-tree_flow
+  grid-template-columns min-content auto
+
+.grid-row-tree_alert
+  grid-template-columns min-content auto
 
 .grid-header
-    background-color $color-1
+  background-color $color-1
 
 .grid-header
 .grid-info
-    height 100%
+  height 100%
 
 .grid-header > div
 .grid-info > div
-    padding 1rem
+  padding 2rem
 
 .grid-info
-    height 100%
-    overflow-y scroll
+  height 100%
+  overflow-y scroll
 
-    >div
-        margin 1rem 0
+  >div
+    margin 1rem 0
 
-        &:first-child
-            margin 0
+    &:first-child
+      margin 0
+
+.tile_component
+  width: 100%
+  display: inline-flex
+  justify-content: space-between
+
+  .checkbox
+    align-self: right
+
+.button, button, input[type="submit"], input[type="reset"], input[type="button"]
+  display: inline-block;
+  height: 38px;
+  padding: 0 30px;
+  // color: #555;
+  text-align: center;
+  // font-size: 11px;
+  font-weight: 600;
+  line-height: 38px;
+  letter-spacing: .1rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  white-space: nowrap;
+  background-color: transparent;
+  border-radius: 4px;
+  // border: 1px solid #bbb;
+  // border-top-color: rgb(187, 187, 187);
+  // border-right-color: rgb(187, 187, 187);
+  // border-bottom-color: rgb(187, 187, 187);
+  // border-left-color: rgb(187, 187, 187);
+  cursor: pointer;
+  box-sizing: border-box;
+
+.flex-buttons
+  width 100%
+  display flex
+  flex-wrap wrap
+  justify-content space-between
+  align-items flex-start
 
 .action_button
-    font-size 0.9265rem
-    display inline-block
-    min-width 86px
-    padding 0px 6px
-    text-align left
-    margin 2px
-    border-color $color-4
-    opacity 0.75
+  font-size 0.8rem
+  display inline-block
+  min-width 86px
+  padding 0px 6px
+  text-align left
+  margin 2px
+  border-color $color-5
+  text-transform uppercase
+  opacity 0.75
 
-    i
-        padding 0
+  i
+    padding 0
 
-    &:hover
-        border-color $color-5
-        opacity 1
+  &:hover
+    border-color $color-6
+    opacity 1
+
+  &.auto-width
+    min-width 20px
+
+  span
+    margin-left 0
 
 .action_toogle
-    &:hover
-        color $color-2
+  &:hover
+    color $color-2
 
 .clear
-    clear both
+  clear both
 
 .header-tile-icons
-    display flex
-    justify-content flex-start
-    margin 4px 0.3rem
+  display flex
+  justify-content flex-start
+  margin 4px 0.3rem
 
-    span
-        vertical-align middle
-        margin 0 0.25rem 0 0
+  span
+    vertical-align middle
+    margin 0 0.25rem 0 0
 
-        i
-            margin 0 0.42rem
+    i
+      margin 0 0.42rem
 
-    .state-warning
-        color red
+  .state-warning
+    color #BF360C
 
 .header-tile-info
+  margin-bottom 0
+
+  li
+    display flex
+    vertical-align middle
+    margin-bottom 0
+
+    i
+      padding 0
+      vertical-align middle
+
+ul
+  &.process-info
     margin-bottom 0
 
     li
-        display flex
-        vertical-align middle
-        margin-bottom 0
-
-        i
-            padding 0
-            vertical-align middle
-
-ul
-    &.process-info
-        margin-bottom 0
-
-        li
-            margin-bottom 4px
+      margin-bottom 4px
 
 div
-    &.process_header_tile_off
-        background-color lightgray
-        height 100%
+  &.process_header_tile_off
+    background-color lightgray
+    height 100%
 
-    &.process_header_tile_on
-        background-color $color-3
-        height 100%
+  &.process_header_tile_on
+    background-color $color-4
+    height 100%
 
-    &.process_info_tile
-        background $color-6
-        overflow-x scroll
-        width 100%
+  &.process_info_tile
+    background $color-7
+    overflow-x scroll
+    width 100%
 
-    &.table_layout
-        display block
-        margin-bottom 0.5rem
+  &.table_layout
+    display block
+    margin-bottom 0.5rem
 
-    &.table_layout_element
-        &:first-child
-            margin-right 8px
+  &.table_layout_element
+    &:first-child
+      margin-right 8px
 
 
-    &.is_selected_timeperiod
-        border 4px solid $color-7
-        box-sizing content-box
+  &.is_selected_timeperiod
+    border 4px solid $color-8
+    // box-sizing content-box
 
-    &.is_next_timeperiod
-        border 4px solid $color-8
+  &.is_next_timeperiod
+    border 4px solid $color-9
 
-    &.state_embryo
-        background-color $color-9
+  &.state_embryo
+    background-color $color-10
 
-        div
-            color $color-10
+  &.state_in_progress
+    background-color $color-12
 
-    &.state_in_progress
-        background-color $color-11
+  &.state_processed
+    background-color $color-13
 
-        div
-            color $color-10
+  &.state_final_run
+    background-color $color-14
 
-    &.state_processed
-        background-color $color-12
+  &.state_skipped
+    background-color $color-15
 
-        div
-            color $color-10
+    .action_button
+      border-color $color-6
 
-    &.state_final_run
-        background-color $color-13
+  &.state_noop
+    background-color $color-16
 
-        div
-            color $color-10
+  &.state_inconsistent
+    background-color $color-17
 
-    &.state_skipped
-        background-color $color-14
-
-        div
-            color $color-10
-
-        .action_button
-            border-color $color-4
-
-    &.state_noop
-        background-color $color-15
-
-        div
-            color $color-10
-
-    &.state_inconsistent
-        background-color $color-16
-
-    &.state_inactive
-        background-color lightgray
+  &.state_inactive
+    background-color lightgray
 
 .process-form
-    margin-bottom 0
+  margin-bottom 0
 
-    input[type="text"]
-        height 2.5rem
-        padding 2px 5px
-        margin-right 0.5rem
+  input[type="text"]
+    height 2.5rem
+    padding 2px 5px
+    margin-right 0.5rem
 
-    button
-        height 2.5rem
-        border-color $color-4
-        opacity 0.75
-        padding 0 6px
-        min-width 4rem
+  button
+    height 2.5rem
+    border-color $color-5
+    opacity 0.75
+    padding 0 6px
+    min-width 4rem
 
-        i
-            opacity 0.8
+    i
+      opacity 0.8
 
-        &:hover
-            border-color $color-5
-            opacity 1
+    &:hover
+      border-color $color-6
+      opacity 1
 
 .btn-center
-    text-align center
+  text-align center
+
+// HACK: shrink the buttons to icons for smaller screens
+@media (max-width:1280px)
+  .grid-row
+    div
+      .action_button
+        font-size 1rem
+        min-width 40px
+        display inline-block
+        padding 0px 6px
+        text-align center
+        margin 2px
+        border-color $color-5
+        text-transform uppercase
+        opacity 0.75
+        span
+          display none
