--- a/synergy/mx/templates/block_time_window_selector.html
+++ b/synergy/mx/templates/block_time_window_selector.html
@@ -8,17 +8,41 @@
 {% set failed_checked = 'checked' if not details.is_request_valid or details.is_include_failed == True else '' %}
 {% set disabled_checked = 'checked' if details.is_include_disabled == True else '' %}
 
-<form data-form_initial_load="{{ 'true' if details.is_request_valid else 'false' }}" style="text-align: center" method="get" id="form_time_window">
-    <label><input type="radio" name="time_window" id="days_1" value="1" {{ days_1_checked }} />today</label>
-    <label><input type="radio" name="time_window" id="days_7" value="7" {{ days_7_checked }} />last 7 days</label>
-    <label><input type="radio" name="time_window" id="days_30" value="30" {{ days_30_checked }} />last 30 days</label>
-    <br/>
-    <label><input type="checkbox" name="include_running" id="include_running" {{ running_checked }} />running</label>
-    <label><input type="checkbox" name="include_processed" id="include_processed" {{ processed_checked }} />processed</label>
-    <label><input type="checkbox" name="include_noop" id="include_noop" {{ noop_checked }} />noop</label>
-    <label><input type="checkbox" name="include_failed" id="include_failed" {{ failed_checked }} />failed</label>
-    <label><input type="checkbox" name="include_disabled" id="include_disabled" {{ disabled_checked }} />disabled</label>
-    <input type="submit" class="action_button fa-input" title="Refresh" value="&#xf021;&nbsp;Refresh"/>
+<form class="table-filter-form" data-form_initial_load="{{ 'true' if details.is_request_valid else 'false' }}" method="get" id="form_time_window">
+    <div class="row">
+        <div class="three columns">
+            <label><input type="radio" name="time_window" id="days_1" value="1" {{ days_1_checked }} /><span class="label-body">today</span></label>
+            <label><input type="radio" name="time_window" id="days_7" value="7" {{ days_7_checked }} />
+                <span class="label-body">last 7 days</span>
+            </label>
+            <label><input type="radio" name="time_window" id="days_30" value="30" {{ days_30_checked }} />
+                <span class="label-body">last 30 days</span>
+            </label>
+        </div>
+        <div class="three columns">
+            <label><input type="checkbox" name="include_running" id="include_running" {{ running_checked }} />
+                <span class="label-body">running</span>
+            </label>
+            <label><input type="checkbox" name="include_processed" id="include_processed" {{ processed_checked }} />
+                <span class="label-body">processed</span>
+            </label>
+            <label><input type="checkbox" name="include_noop" id="include_noop" {{ noop_checked }} />
+                <span class="label-body">noop</span>
+            </label>
+        </div>
+        <div class="three columns">
+            <label><input type="checkbox" name="include_failed" id="include_failed" {{ failed_checked }} />
+                <span class="label-body">failed</span>
+            </label>
+            <label><input type="checkbox" name="include_disabled" id="include_disabled" {{ disabled_checked }} />
+                <span class="label-body">disabled</span>
+            </label>
+        </div>
+        <!-- <input type="submit" class="action_button fa-input" title="Refresh" value="&#xf021;&nbsp;Refresh"/> -->
+        <div class="u-cf u-pull-right">
+            <button type="submit" class="action_button btn-center" title="Refresh"><i class="fa fa-refresh"></i> <span>Refresh</span></button>
+        </div>
+    </div>
 </form>
 
 {% set sorted_columns = [] %}
