--- a/synergy/mx/templates/main_header.html
+++ b/synergy/mx/templates/main_header.html
@@ -1,20 +1,20 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html
-    PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+<!DOCTYPE html>
+<html lang="en">
 
-    <head profile="http://www.w3.org/2005/10/profile">
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+<head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="icon" type="image/png" href="{{ url_for('static', file='images/sy_brown.png') }}">
         <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/scheduler_ui.css') }}"> -->
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/context_menu.css') }}">
         <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/mx_page.css') }}"> -->
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/index.css') }}">
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/normalize.css') }}">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/skeleton.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/normalize.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/index.css') }}">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/font-awesome.css') }}">
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/jquery.datatables-1.10.18.css') }}">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/alertify.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/jquery.datatables-1.10.18.css') }}">
         <script type="text/javascript" src="{{ url_for('static', file='js/jquery-3.4.1.min.js') }}"></script>
         <script type="text/javascript"
             src="{{ url_for('static', file='js/jquery.datatables-1.10.18.min.js') }}"></script>
@@ -90,9 +90,6 @@
 
             </div>
         </div>
-
-
-
 
         <div class="container-fluid">
             {% macro render_td(endpoint, title) %}
