--- a/synergy/mx/templates/object_viewer.html
+++ b/synergy/mx/templates/object_viewer.html
@@ -5,10 +5,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/mx_page.css') }}">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/font-awesome.css') }}">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/normalize.css') }}">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/skeleton.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/index.css') }}">
         <script type="text/javascript" src="{{ url_for('static', file='js/mx_utils.js') }}"></script>
         <script type="text/javascript" src="{{ url_for('static', file='js/jquery-3.4.1.min.js') }}"></script>
         <title>Object Viewer</title>
@@ -19,8 +19,8 @@
             <pre id="json"></pre>
 
             <form style="text-align: center">
-                <input type="button" class="action_button fa-input" value="&#xf00d;&nbsp;Close"
-                    onclick="window.close()" />
+                <button type="button" class="action_button" onclick="window.close()"><i
+                        class="fa">&#xf00d;</i><span>Close</span></button>
             </form>
 
             <script type="text/javascript">
