--- a/synergy/mx/templates/schedulable_form.html
+++ b/synergy/mx/templates/schedulable_form.html
@@ -5,12 +5,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/mx_page.css') }}">
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/font-awesome.css') }}">
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/normalize.css') }}">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/skeleton.css') }}">
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/jquery.datatables-1.10.18.css') }}">
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/scheduler_ui.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/normalize.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/index.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/font-awesome.css') }}">
+        <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/jquery.datatables-1.10.18.css') }}"> -->
         <script type="text/javascript" src="{{ url_for('static', file='js/jquery-3.4.1.min.js') }}"></script>
         <script type="text/javascript" src="{{ url_for('static', file='js/mx_utils.js') }}"></script>
 
@@ -106,15 +105,19 @@
                         <td colspan="3" align="center">
                             <div id="buttons">
                                 {%- if not handler -%}
-                                <input type="submit" name="insert_button" value="Insert" onclick="closeWindow()" />
+                                <!-- <input type="submit" name="insert_button" value="Insert" onclick="closeWindow()" /> -->
+                                <button type="submit" name="insert_button" value="Insert" onclick="closeWindow()">Insert</button>
                                 <!-- formmethod="put" -->
                                 {%- else -%}
-                                <input type="submit" name="update_button" value="Update" onclick="closeWindow()" />
+                                <!-- <input type="submit" name="update_button" value="Update" onclick="closeWindow()" /> -->
+                                <button type="submit" name="update_button" value="Update" onclick="closeWindow()">Update</button>
                                 <!-- formmethod="post" -->
-                                <input type="submit" name="delete_button" value="Delete" onclick="closeWindow()" />
+                                <!-- <input type="submit" name="delete_button" value="Delete" onclick="closeWindow()" /> -->
+                                <button type="submit" name="delete_button" value="Delete" onclick="closeWindow()">Delete</button>
                                 <!-- formmethod="delete" -->
                                 {%- endif -%}
-                                <input type="submit" name="cancel_button" value="Cancel" onclick="closeWindow()" />
+                                <!-- <input type="submit" name="cancel_button" value="Cancel" onclick="closeWindow()" /> -->
+                                <button type="submit" name="cancel_button" value="Cancel" onclick="closeWindow()">Cancel</button>
                                 <!-- formmethod="head" -->
 
                                 <!-- trailing <div style="clear:both"> is needed to keep the above buttons inside div#buttons -->
