--- a/synergy/mx/static/css/index.css
+++ b/synergy/mx/static/css/index.css
@@ -1,3 +1,239 @@
+.inline {
+  display: inline;
+}
+.inline-flex {
+  display: inline-flex;
+}
+.p-0 {
+  padding: 0rem;
+}
+.px-0 {
+  padding-left: 0rem;
+  padding-right: 0rem;
+}
+.py-0 {
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+}
+.pl-0 {
+  padding-left: 0rem;
+}
+.pr-0 {
+  padding-right: 0rem;
+}
+.pt-0 {
+  padding-top: 0rem;
+}
+.pb-0 {
+  padding-bottom: 0rem;
+}
+.m-0 {
+  margin: 0rem;
+}
+.mx-0 {
+  margin-left: 0rem;
+  margin-right: 0rem;
+}
+.my-0 {
+  margin-top: 0rem;
+  margin-bottom: 0rem;
+}
+.ml-0 {
+  margin-left: 0rem;
+}
+.mr-0 {
+  margin-right: 0rem;
+}
+.mt-0 {
+  margin-top: 0rem;
+}
+.mb-0 {
+  margin-bottom: 0rem;
+}
+.p-1 {
+  padding: 1rem;
+}
+.px-1 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.py-1 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+.pl-1 {
+  padding-left: 1rem;
+}
+.pr-1 {
+  padding-right: 1rem;
+}
+.pt-1 {
+  padding-top: 1rem;
+}
+.pb-1 {
+  padding-bottom: 1rem;
+}
+.m-1 {
+  margin: 1rem;
+}
+.mx-1 {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+.my-1 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+.ml-1 {
+  margin-left: 1rem;
+}
+.mr-1 {
+  margin-right: 1rem;
+}
+.mt-1 {
+  margin-top: 1rem;
+}
+.mb-1 {
+  margin-bottom: 1rem;
+}
+.p-2 {
+  padding: 2rem;
+}
+.px-2 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+.py-2 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+.pl-2 {
+  padding-left: 2rem;
+}
+.pr-2 {
+  padding-right: 2rem;
+}
+.pt-2 {
+  padding-top: 2rem;
+}
+.pb-2 {
+  padding-bottom: 2rem;
+}
+.m-2 {
+  margin: 2rem;
+}
+.mx-2 {
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
+.my-2 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+.ml-2 {
+  margin-left: 2rem;
+}
+.mr-2 {
+  margin-right: 2rem;
+}
+.mt-2 {
+  margin-top: 2rem;
+}
+.mb-2 {
+  margin-bottom: 2rem;
+}
+.p-3 {
+  padding: 3rem;
+}
+.px-3 {
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+.py-3 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+.pl-3 {
+  padding-left: 3rem;
+}
+.pr-3 {
+  padding-right: 3rem;
+}
+.pt-3 {
+  padding-top: 3rem;
+}
+.pb-3 {
+  padding-bottom: 3rem;
+}
+.m-3 {
+  margin: 3rem;
+}
+.mx-3 {
+  margin-left: 3rem;
+  margin-right: 3rem;
+}
+.my-3 {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+.ml-3 {
+  margin-left: 3rem;
+}
+.mr-3 {
+  margin-right: 3rem;
+}
+.mt-3 {
+  margin-top: 3rem;
+}
+.mb-3 {
+  margin-bottom: 3rem;
+}
+.p-4 {
+  padding: 4rem;
+}
+.px-4 {
+  padding-left: 4rem;
+  padding-right: 4rem;
+}
+.py-4 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+.pl-4 {
+  padding-left: 4rem;
+}
+.pr-4 {
+  padding-right: 4rem;
+}
+.pt-4 {
+  padding-top: 4rem;
+}
+.pb-4 {
+  padding-bottom: 4rem;
+}
+.m-4 {
+  margin: 4rem;
+}
+.mx-4 {
+  margin-left: 4rem;
+  margin-right: 4rem;
+}
+.my-4 {
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+}
+.ml-4 {
+  margin-left: 4rem;
+}
+.mr-4 {
+  margin-right: 4rem;
+}
+.mt-4 {
+  margin-top: 4rem;
+}
+.mb-4 {
+  margin-bottom: 4rem;
+}
 html,
 body {
   margin: 0;
@@ -13,11 +249,13 @@ html {
 }
 body {
   color: #222;
-  padding: 10px;
   font-size: 1.4rem;
 }
 .footer {
   width: 100%;
+  bottom: 0;
+  right: 0;
+  left: 0;
   margin: 0;
   padding: 1rem;
   clear: both;
@@ -28,9 +266,6 @@ body {
 }
 .footer a {
   color: #fff;
-}
-.inline {
-  display: inline;
 }
 .nav {
   display: inline-flex;
@@ -58,12 +293,19 @@ body {
 .nav-item:hover {
   color: #fff;
 }
-.nav-item:active {
-  color: #fff;
-  text-decoration: underline;
-}
 .nav-item:last-of-type {
   border: none;
+}
+a.nav-item {
+  color: #f5f5f5;
+  text-decoration: none;
+  box-sizing: border-box;
+  height: 100%;
+  white-space: nowrap;
+}
+a.nav-item.active {
+  color: #fff;
+  background-color: rgba(255,255,255,0.3);
 }
 .page-title-bar {
   padding: 1rem 2rem;
@@ -80,21 +322,50 @@ body {
   align-self: flex-end;
   align-items: flex-end;
 }
-a.nav-item {
-  color: #f5f5f5;
-  text-decoration: none;
-  box-sizing: border-box;
-  height: 100%;
-}
-a.nav-item.active {
-  color: #fff;
-  background-color: rgba(255,255,255,0.3);
-}
 .side-tool-bar {
   margin: 0.5rem 0;
   display: flex;
   justify-content: flex-end;
   vertical-align: center;
+}
+.popup-form tr:last-child td {
+  padding: 2rem 1rem;
+  text-align: right;
+}
+.popup-form tr:last-child:hover {
+  background-color: transparent;
+}
+.popup-form tr td {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.popup-form tr td:first-child {
+  font-weight: bold;
+  text-transform: uppercase;
+  white-space: nowrap;
+  font-size: 1.2rem;
+}
+.process-form {
+  margin-bottom: 0;
+}
+.process-form input[type="text"] {
+  height: 2.5rem;
+  padding: 2px 5px;
+  margin-right: 0.5rem;
+}
+.process-form button {
+  height: 2.5rem;
+  border-color: #333;
+  opacity: 0.75;
+  padding: 0 6px;
+  min-width: 4rem;
+}
+.process-form button i {
+  opacity: 0.8;
+}
+.process-form button:hover {
+  border-color: #0e0e0e;
+  opacity: 1;
 }
 .grid-container {
   margin: 2rem 4rem;
@@ -141,6 +412,7 @@ a.nav-item.active {
 }
 .grid-info >div {
   margin: 1rem 0;
+  border: 4px solid transparent;
 }
 .grid-info >div:first-child {
   margin: 0;
@@ -173,6 +445,9 @@ input[type="button"] {
   cursor: pointer;
   box-sizing: border-box;
 }
+.btn-center {
+  text-align: center !important;
+}
 .flex-buttons {
   width: 100%;
   display: flex;
@@ -185,7 +460,6 @@ input[type="button"] {
   display: inline-block;
   min-width: 86px;
   padding: 0px 6px;
-  text-align: left;
   margin: 2px;
   border-color: #333;
   text-transform: uppercase;
@@ -202,7 +476,22 @@ input[type="button"] {
   min-width: 20px;
 }
 .action_button span {
-  margin-left: 0;
+  margin-left: 4px;
+}
+.action_button.btn-icons {
+  font-size: 1rem;
+  min-width: 38px;
+  text-align: center;
+  text-transform: uppercase;
+}
+.action_button.btn-icons span {
+  display: none;
+}
+.grid-info .action_button {
+  text-align: left;
+}
+.grid-info .action_button span {
+  margin: 0;
 }
 .action_toogle:hover {
   color: #0cf;
@@ -225,23 +514,24 @@ input[type="button"] {
 .header-tile-icons .state-warning {
   color: #bf360c;
 }
-.header-tile-info {
-  margin-bottom: 0;
-}
-.header-tile-info li {
-  display: flex;
-  vertical-align: middle;
-  margin-bottom: 0;
-}
-.header-tile-info li i {
-  padding: 0;
-  vertical-align: middle;
-}
 ul.process-info {
   margin-bottom: 0;
 }
 ul.process-info li {
   margin-bottom: 4px;
+}
+ul.header-tile-info {
+  margin-bottom: 0;
+}
+ul.header-tile-info li {
+  display: flex;
+  margin-bottom: 4px;
+  align-items: center;
+  justify-content: left;
+}
+ul.header-tile-info li i {
+  padding: 0;
+  top: 4px;
 }
 div.process_header_tile_off {
   background-color: #d3d3d3;
@@ -296,32 +586,7 @@ div.state_inconsistent {
 div.state_inactive {
   background-color: #d3d3d3;
 }
-.process-form {
-  margin-bottom: 0;
-}
-.process-form input[type="text"] {
-  height: 2.5rem;
-  padding: 2px 5px;
-  margin-right: 0.5rem;
-}
-.process-form button {
-  height: 2.5rem;
-  border-color: #333;
-  opacity: 0.75;
-  padding: 0 6px;
-  min-width: 4rem;
-}
-.process-form button i {
-  opacity: 0.8;
-}
-.process-form button:hover {
-  border-color: #0e0e0e;
-  opacity: 1;
-}
-.btn-center {
-  text-align: center;
-}
-@media (max-width: 1280px) {
+@media (max-width: 1290px) {
   .grid-row div .action_button {
     font-size: 1rem;
     min-width: 40px;
@@ -335,6 +600,9 @@ div.state_inactive {
   }
   .grid-row div .action_button span {
     display: none;
+  }
+  .grid-row div.tree_header_tile .action_button {
+    font-size: 0.8rem;
   }
 }
 .table-entries {
@@ -378,6 +646,50 @@ form.table-form {
 .table-filter-form {
   background-color: #dde1e4;
   padding: 2rem;
+}
+.freerun-container {
+  max-width: 90%;
+  margin: 0 auto;
+}
+.table-filter-form .table-filter-container {
+  display: inline-flex;
+  width: 100%;
+  justify-content: space-between;
+  flex-wrap: auto;
+}
+.table-filter-form .table-filter-container div:nth-child(1) {
+  margin-right: 1rem;
+}
+.table-filter-form .table-filter-container div:nth-child(2) {
+  margin-right: 1rem;
+}
+.table-filter-form .table-filter-container div:nth-child(3) {
+  margin-right: 1rem;
+}
+.table-filter-form .table-filter-container .filter {
+  flex: 1 1 auto;
+}
+.table-filter-form .table-filter-container .filter input[type="search"] {
+  height: auto;
+}
+.table-filter-form .table-filter-container .refresh-button {
+  align-content: right;
+  align-self: flex-end;
+  text-align: right;
+}
+.dataTables_wrapper {
+  margin-bottom: 2rem !important;
+}
+.dataTables_wrapper .dataTables_filter {
+  text-align: left !important;
+  float: none !important;
+  display: none !important;
+}
+.dataTables_wrapper .dataTables_filter input[type="search"] {
+  height: auto;
+}
+#dashboard_table_filter {
+  display: none !important;
 }
 tr.state_embryo {
   background-color: #d5f5ff !important;
