--- a/synergy/mx/static/styl/index.styl
+++ b/synergy/mx/static/styl/index.styl
@@ -1,3 +1,8 @@
+$body-font-size = 1.4rem
+$btn-font-size = 0.8rem
+$btn-font-size-icons = 1rem
+
+@import './helpers.styl'
 @import './colors.styl'
 @import './ui.styl'
 @import './mx.styl'
