--- a/synergy/mx/templates/dashboard_freeruns.html
+++ b/synergy/mx/templates/dashboard_freeruns.html
@@ -35,7 +35,7 @@
                 <td>
                     {% set url = 'action=freerun/uow' + '&process_name=' + uow_entry.process_name + '&entry_name=' + uow_entry.entry_name %}
                     <form class="table-form" method="GET" onsubmit="window.open('/viewer/object/?{{ url }}','View Uow',
-                    'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=450,height=400'); return false;">
+                    `toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}`); return false;">
                         <button type="submit" class="action_button fa-input" title="Workflow"><i class="fa">&#xf1c9;</i>
                             <span>View Uow</span></button>
                     </form>
@@ -43,7 +43,7 @@
                 <td>
                     {% set url = 'action=freerun/log/uow' + '&process_name=' + uow_entry.process_name + '&entry_name=' + uow_entry.entry_name %}
                     <form class="table-form" method="GET" onsubmit="window.open('/viewer/object/?{{ url }}','Uow Log',
-                    'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=800,height=480'); return false;">
+                    `toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}`); return false;">
                         <button type="submit" class="action_button fa-input" title="Workflow"><i class="fa">&#xf0f6</i>
                             <span>Uow Log</span></button>
                     </form>
@@ -51,7 +51,7 @@
                 <td>
                     {% set url = 'action=flow/flow/details' + '&process_name=' + job_entry.process_name + '&timeperiod=' + job_entry.timeperiod + '&unit_of_work_type=type_freerun' %}
                     <form class="table-form" method="GET" onsubmit="window.open('/viewer/flow/?{{ url }}','Workflow',
-                    'toolbar=no,scrollbars=yes,resizable=yes,top=150,left=250,width=800,height=800'); return false;">
+                    `toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}`); return false;">
                         <input type="submit" class="action_button fa-input" title="Workflow"
                             value="&#xf074;&nbsp;Workflow" />
                         <button type="submit" class="action_button fa-input" title="Workflow"><i class="fa">&#xf074;</i>
