--- a/synergy/mx/templates/dashboard_managed.html
+++ b/synergy/mx/templates/dashboard_managed.html
@@ -6,7 +6,7 @@
     {{ block_enable_refresh.enable_auto_refresh() }}
 </div>
 
-<div class="container u-max-full-width">
+<div class="container u-full-width">
     {% import 'block_time_window_selector.html' as block_time_window %}
     {{ block_time_window.time_window_selector(details, 2) }}
 
@@ -37,32 +37,32 @@
                 <td>
                     {% set url = 'action=managed/uow' + '&process_name=' + job_entry.process_name + '&timeperiod=' + job_entry.timeperiod %}
                     <form class="table-form" method="GET" onsubmit="window.open('/viewer/object/?{{ url }}','View Uow',
-                 'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=450,height=400'); return false;">
-                        <button type="submit" class="action_button fa-input" title="Workflow"><i class="fa">&#xf1c9;</i>
+                 'toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}'); return false;">
+                        <button type="submit" class="action_button btn-center" title="Workflow"><i class="fa">&#xf1c9;</i>
                             <span>View Uow</span></button>
                     </form>
                 </td>
                 <td>
                     {% set url = 'action=managed/log/uow' + '&process_name=' + job_entry.process_name + '&timeperiod=' + job_entry.timeperiod %}
                     <form class="table-form" method="GET" onsubmit="window.open('/viewer/object/?{{ url }}','Uow Log',
-                 'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=800,height=480'); return false;">
-                        <button type="submit" class="action_button fa-input" title="Workflow"><i class="fa">&#xf0f6;</i>
+                 'toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}'); return false;">
+                        <button type="submit" class="action_button btn-center" title="Workflow"><i class="fa">&#xf0f6;</i>
                             <span>Uow Log</span></button>
                     </form>
                 </td>
                 <td>
                     {% set url = 'action=managed/log/event' + '&process_name=' + job_entry.process_name + '&timeperiod=' + job_entry.timeperiod %}
                     <form class="table-form" method="GET" onsubmit="window.open('/viewer/object/?{{ url }}','Event Log',
-                 'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=800,height=480'); return false;">
-                        <button type="submit" class="action_button fa-input" title="Workflow"><i class="fa">&#xf00b;</i>
+                 'toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}'); return false;">
+                        <button type="submit" class="action_button btn-center" title="Workflow"><i class="fa">&#xf00b;</i>
                             <span>Event Log</span></button>
                     </form>
                 </td>
                 <td>
                     {% set url = 'action=flow/flow/details' + '&process_name=' + job_entry.process_name + '&timeperiod=' + job_entry.timeperiod + '&unit_of_work_type=type_managed' %}
                     <form class="table-form" method="GET" onsubmit="window.open('/viewer/flow/?{{ url }}','Workflow',
-                 'toolbar=no,scrollbars=yes,resizable=yes,top=150,left=250,width=800,height=800'); return false;">
-                        <button type="submit" class="action_button fa-input" title="Workflow"><i class="fa">&#xf074;</i>
+                 'toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}'); return false;">
+                        <button type="submit" class="action_button btn-center" title="Workflow"><i class="fa">&#xf074;</i>
                             <span>Workflow</span></button>
                     </form>
                 </td>
