--- a/synergy/mx/templates/main_header.html
+++ b/synergy/mx/templates/main_header.html
@@ -14,7 +14,8 @@
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/index.css') }}">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/font-awesome.css') }}">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/alertify.css') }}">
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/jquery.datatables-1.10.18.css') }}">
+        <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/jquery.datatables-1.10.18.css') }}"> -->
+        <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css">
         <script type="text/javascript" src="{{ url_for('static', file='js/jquery-3.4.1.min.js') }}"></script>
         <script type="text/javascript"
             src="{{ url_for('static', file='js/jquery.datatables-1.10.18.min.js') }}"></script>
