--- a/synergy/mx/templates/object_viewer.html
+++ b/synergy/mx/templates/object_viewer.html
@@ -19,7 +19,7 @@
             <pre id="json"></pre>
 
             <form style="text-align: center">
-                <button type="button" class="action_button" onclick="window.close()"><i
+                <button type="button" class="action_button btn-center" onclick="window.close()"><i
                         class="fa">&#xf00d;</i><span>Close</span></button>
             </form>
 
