--- a/synergy/mx/templates/scheduler_freerun_entries.html
+++ b/synergy/mx/templates/scheduler_freerun_entries.html
@@ -2,116 +2,124 @@
 {% block body %}
 
 <div class="page-title-bar">
-    <h2>scheduler freerun entries</h2>
+    <!-- <h2>scheduler freerun entries</h2> -->
     {% import 'block_enable_auto_refresh.html' as block_enable_refresh %}
     {{ block_enable_refresh.enable_auto_refresh() }}
 </div>
 
-<table class="one-column-emphasis context-menu">
-    <thead>
-    <tr class="one-column-emphasis-first">
-        <th scope="col"><input type="checkbox" name="select_all" onclick="toggleAllCheckboxes(this)"/> </th>
-        <th scope="col">Trigger On/Alive</th>
-        <th scope="col">Process Name</th>
-        <th scope="col">Entry Name</th>
-        <th scope="col">Trigger Frequency</th>
-        <th scope="col"></th>  <!-- Trigger Now -->
-        <th scope="col">Next Run In</th>
-        <th scope="col">Arguments</th>
-        <th scope="col"></th>  <!-- View Uow -->
-        <th scope="col"></th>  <!-- Uow Log -->
-        <th scope="col"></th>  <!-- Event Log -->
-        <th scope="col"></th>  <!-- Cancel Uow -->
-        <th scope="col"></th>  <!-- Edit -->
-    </tr>
-    </thead>
-    <tbody>
+<div class="u-max-full-width freerun-container">
 
-    {%- for row in details.freerun_entries %}
-    {%- if row.is_on != row.is_alive -%}
-    <tr class="state_inconsistent">
-    {%- elif not row.is_alive -%}
-    <tr class="state_inactive">
-    {%- else -%}
-    <tr>
-    {%- endif -%}
-        <td>
-            {% set value = "{ process_name: '" + row.process_name + "', entry_name: '" + row.entry_name + "' }" %}
-            <input type="checkbox" name="batch_processing" value="{{ value }}"/>
-        </td>
-        <td>{{ row.is_on }} / {{ row.is_alive }}</td>
-        <td>{{ row.process_name }}</td>
-        <td>{{ row.entry_name }}</td>
-        <td>
-            <form method="POST" action="/freerun/entry/interval/">
-                <input type="hidden" name="process_name" value="{{ row.process_name }}" />
-                <input type="hidden" name="entry_name" value="{{ row.entry_name }}" />
-                <input type="text" size="8" maxlength="32" name="interval" value="{{ row.trigger_frequency }}" />
-                <input type="submit" class="fa-input" title="Apply" value="&#xf00c;"/>
-            </form>
-        </td>
-        <td>
-            <form method="POST" action="/freerun/entry/trigger/">
-                <input type="hidden" name="process_name" value="{{ row.process_name }}" />
-                <input type="hidden" name="entry_name" value="{{ row.entry_name }}" />
-                <input type="submit" class="action_button fa-input" title="Trigger" value="&#xf135;&nbsp;Trigger"/>
-            </form>
-        </td>
+    <table class="u-full-width table-entries context-menu">
+        <thead>
+            <tr class="table-entries-header">
+                <th scope="col"><input type="checkbox" name="select_all" onclick="toggleAllCheckboxes(this)" /> </th>
+                <th scope="col" class="pl-1">Trigger On/Alive</th>
+                <th scope="col">Process Name</th>
+                <th scope="col">Entry Name</th>
+                <th scope="col">Trigger Frequency</th>
+                <th scope="col"></th> <!-- Trigger Now -->
+                <th scope="col">Next Run In</th>
+                <th scope="col">Arguments</th>
+                <th scope="col"></th> <!-- View Uow --><!-- Uow Log --><!-- Event Log -->
+                <th scope="col"></th> <!-- Cancel Uow --><!-- Edit -->
+            </tr>
+        </thead>
+        <tbody>
 
-        <td>{{ row.next_run_in }}</td>
-        <td>{{ row.arguments|jsonify }}</td>
-        <td>
-            {% set url = 'action=freerun/uow' + '&process_name=' + row.process_name + '&entry_name=' + row.entry_name %}
-            <form method="GET" onsubmit="window.open('/viewer/object/?{{ url }}','View Uow',
-                 'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=450,height=400'); return false;">
-                <input type="submit" class="action_button fa-input" title="View Uow" value="&#xf1c9;&nbsp;Uow"/>
-            </form>
-        </td>
-        <td>
-            {% set url = 'action=freerun/log/uow' + '&process_name=' + row.process_name + '&entry_name=' + row.entry_name %}
-            <form method="GET" onsubmit="window.open('/viewer/object/?{{ url }}','Uow Log',
-                    'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=800,height=480'); return false;">
-                <input type="submit" class="action_button fa-input" title="Log Uow" value="&#xf0f6;&nbsp;Log&nbsp;Log"/>
-            </form>
-        </td>
-        <td>
-            {% set url = 'action=freerun/log/event' + '&process_name=' + row.process_name + '&entry_name=' + row.entry_name %}
-            <form method="GET" onsubmit="window.open('/viewer/object/?{{ url }}','Event Log',
-                    'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=800,height=480'); return false;">
-                <input type="submit" class="action_button fa-input" title="Event Uow" value="&#xf00b;&nbsp;Event&nbsp;Log"/>
-            </form>
-        </td>
-        <td>
-            <form method="GET" action="/freerun/uow/cancel/">
-                <input type="hidden" name="process_name" value="{{ row.process_name }}" />
-                <input type="hidden" name="entry_name" value="{{ row.entry_name }}" />
-                <input type="submit" class="action_button fa-input" title="Cancel Uow" value="&#xf00d;&nbsp;Cancel"/>
-            </form>
-        </td>
-        <td>
-            {% set url = '/viewer/schedulable/?process_name=' + row.process_name + '&entry_name=' + row.entry_name + '&is_new_entry=False'%}
-            <form method="GET"
-                 onsubmit="window.open('{{ url }}','Edit Freerun Trigger',
-                 'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=750,height=550'); return false;">
-                <input type="submit" class="action_button fa-input" title="Edit" value="&#xf044;&nbsp;Edit"/>
-            </form>
-        </td>
-    </tr>
-    {%- endfor %}
+            {%- for row in details.freerun_entries %}
+            {%- set tr_class = '' -%}
+                {%- if row.is_on != row.is_alive -%}
+                    {%- set tr_class = 'state_inconsistent' -%}
+                {%- elif not row.is_alive -%}
+                    {%- set tr_class = 'state_inactive' -%}
+                {%- endif -%}
+            <tr class="{{ tr_class }}">
+                <td>
+                    {% set value = "{ process_name: '" + row.process_name + "', entry_name: '" + row.entry_name + "' }" %}
+                    <input type="checkbox" name="batch_processing" value="{{ value }}" />
+                </td>
+                <td class="pl-1">{{ row.is_on }} / {{ row.is_alive }}</td>
+                <td>{{ row.process_name }}</td>
+                <td>{{ row.entry_name }}</td>
+                <td>
+                    <form class="table-form" method="POST" action="/freerun/entry/interval/">
+                        <input type="hidden" name="process_name" value="{{ row.process_name }}" />
+                        <input type="hidden" name="entry_name" value="{{ row.entry_name }}" />
+                        <input type="text" size="8" maxlength="32" name="interval"
+                            value="{{ row.trigger_frequency }}" />
+                        <button type="submit" class="action_button btn-icons btn-center" title="Apply"><i
+                                class="fa">&#xf00c;</i></button>
+                    </form>
+                </td>
+                <td>
+                    <form class="table-form" method="POST" action="/freerun/entry/trigger/">
+                        <input type="hidden" name="process_name" value="{{ row.process_name }}" />
+                        <input type="hidden" name="entry_name" value="{{ row.entry_name }}" />
+                        <button type="submit" class="action_button btn-center" title="Trigger"><i
+                                class="fa fa-bolt"></i><span>Trigger</span></button>
+                    </form>
+                </td>
 
-    <tr>
-        <td colspan="13">
-            {% set url = '/viewer/schedulable/?is_new_entry=True'%}
-            <a href="#" onClick="MyWindow=window.open('{{ url }}','New Freerun Trigger',
-                'toolbar=no,scrollbars=yes,resizable=yes,top=250,left=250,width=750,height=550'); return false;">
-                <i class="fa fa-plus"></i>&nbsp;Add New Freerun Trigger
-            </a>
-        </td>
-    </tr>
+                <td>{{ row.next_run_in }}</td>
+                <td>{{ row.arguments|jsonify }}</td>
+                <td class="button-col">
+                    {% set url = 'action=freerun/uow' + '&process_name=' + row.process_name + '&entry_name=' + row.entry_name %}
+                    <form class="table-form inline" method="GET"
+                        onsubmit="window.open('/viewer/object/?{{ url }}','View Uow',
+                 `toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}`); return false;">
+                        <button type="submit" class="action_button btn-icons btn-center" title="View Uow"><i
+                                class="fa">&#xf1c9;</i><span>Uow</span></button>
+                    </form>
 
-    </tbody>
-</table>
+                    {% set url = 'action=freerun/log/uow' + '&process_name=' + row.process_name + '&entry_name=' + row.entry_name %}
+                    <form class="table-form inline" method="GET"
+                        onsubmit="window.open('/viewer/object/?{{ url }}','Uow Log',
+                    `toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}`); return false;">
+                        <button type="submit" class="action_button btn-icons btn-center" title="Log Uow"><i
+                                class="fa">&#xf0f6;</i><span>Log Uow</span></button>
+                    </form>
 
+                    {% set url = 'action=freerun/log/event' + '&process_name=' + row.process_name + '&entry_name=' + row.entry_name %}
+                    <form class="table-form inline" method="GET"
+                        onsubmit="window.open('/viewer/object/?{{ url }}','Event Log',
+                    `toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}`); return false;">
+                        <button type="submit" class="action_button btn-icons btn-center" title="Event Uow"><i
+                                class="fa">&#xf00b;</i><span>Event Log</span></button>
+                    </form>
+                </td>
+                <td class="button-col">
+                    <form class="table-form inline" method="GET" action="/freerun/uow/cancel/">
+                        <input type="hidden" name="process_name" value="{{ row.process_name }}" />
+                        <input type="hidden" name="entry_name" value="{{ row.entry_name }}" />
+                        <button type="submit" class="action_button btn-icons btn-center" title="Cancel Uow"><i
+                                class="fa">&#xf00d;</i><span>Cancel</span></button>
+                    </form>
+
+                    {% set url = '/viewer/schedulable/?process_name=' + row.process_name + '&entry_name=' + row.entry_name + '&is_new_entry=False'%}
+                    <form class="table-form inline" method="GET"
+                        onsubmit="window.open('{{ url }}','Edit Freerun Trigger',
+                 `toolbar=no,scrollbars=yes,resizable=yes,left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}`); return false;">
+                        <button type="submit" class="action_button btn-icons btn-center" title="Edit"><i
+                                class="fa">&#xf044;</i><span>Edit</span></button>
+                    </form>
+                </td>
+            </tr>
+            {%- endfor %}
+
+            <tr>
+                <td colspan="13" style="text-align: right">
+                    {% set url = '/viewer/schedulable/?is_new_entry=True'%}
+                    <a href="#"
+                        onclick="window.open('{{ url }}','New Freerun Trigger',
+                `toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}`); return false;">
+                        <i class="fa fa-plus"></i><span>&nbsp;Add New Freerun Trigger</span>
+                    </a>
+                </td>
+            </tr>
+
+        </tbody>
+    </table>
+</div>
 {% import 'block_context_menu.html' as context_menu %}
 {{ context_menu.trigger_menu(true) }}
 
