Added function to parse YYYYMMDDHH date string
Parses YYYYMMDDHH date string to YYYY-MM-DD:HH in tiles.

--- a/synergy/mx/static/css/index.css
+++ b/synergy/mx/static/css/index.css
@@ -372,7 +372,7 @@ a.nav-item.active {
 }
 .grid-row {
   background-color: #f5f5f5;
-  background-size: cover;
+  background-size: 100%;
   display: grid;
   grid-gap: 1rem;
   justify-content: left;
