--- a/synergy/mx/static/styl/mx.styl
+++ b/synergy/mx/static/styl/mx.styl
@@ -4,7 +4,7 @@
 
 .grid-row
   background-color whitesmoke
-  background-size cover
+  background-size 100%
   display grid
   grid-gap 1rem
   justify-content left
