--- a/synergy/mx/static/css/mx.css
+++ b/synergy/mx/static/css/mx.css
@@ -3,7 +3,7 @@
 }
 .grid-row {
   background-color: #f5f5f5;
-  background-size: cover;
+  background-size: 100%;
   display: grid;
   grid-gap: 1rem;
   justify-content: left;
