--- a/synergy/mx/templates/mx_page_tiles.html
+++ b/synergy/mx/templates/mx_page_tiles.html
@@ -5,7 +5,7 @@
     {{ block_enable_refresh.enable_auto_refresh() }}
 </div>
 
-<div class="grid-container">
+<div class="grid-container u-max-full-width">
     {# active_mx_page is declared in the main_header.html#}
     {% set mx_trees = details.mx_page_trees(active_mx_page[0]) %}
     <!-- NOTE: data is requested from mx/views.py -->
