Cleaned up code, switched to dataTables CDN
Cleaned up the code as much as possible, deleted unused CSS files, moved jquery datatables js / css, skeleton, and normalize to CDN (files are still included in case of breaking changes).

--- a/synergy/mx/templates/scheduler_freerun_entries.html
+++ b/synergy/mx/templates/scheduler_freerun_entries.html
@@ -61,7 +61,7 @@
                 </td>
 
                 <td>{{ row.next_run_in }}</td>
-                <td>{{ row.arguments|jsonify }}</td>
+                <td style="max-width: 180px">{{ row.arguments|jsonify }}</td>
                 <td class="button-col">
                     {% set url = 'action=freerun/uow' + '&process_name=' + row.process_name + '&entry_name=' + row.entry_name %}
                     <form class="table-form inline" method="GET"
