--- a/synergy/mx/templates/main_header.html
+++ b/synergy/mx/templates/main_header.html
@@ -6,19 +6,24 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="icon" type="image/png" href="{{ url_for('static', file='images/sy_brown.png') }}">
-        <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/scheduler_ui.css') }}"> -->
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/context_menu.css') }}">
-        <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/mx_page.css') }}"> -->
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/skeleton.css') }}">
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/normalize.css') }}">
+        <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/skeleton.css') }}"> -->
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
+        <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/normalize.css') }}"> -->
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.2/normalize.min.css">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/index.css') }}">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/font-awesome.css') }}">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/alertify.css') }}">
-        <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', file='css/jquery.datatables-1.10.18.css') }}"> -->
         <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css">
-        <script type="text/javascript" src="{{ url_for('static', file='js/jquery-3.4.1.min.js') }}"></script>
-        <script type="text/javascript"
-            src="{{ url_for('static', file='js/jquery.datatables-1.10.18.min.js') }}"></script>
+
+        <!-- NOTE: adding scripts to end breaks for some reason -->
+        <!-- <script type="text/javascript" src="{{ url_for('static', file='js/jquery-3.4.1.min.js') }}"></script> -->
+        <script
+			  src="https://code.jquery.com/jquery-3.4.1.min.js"
+			  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+			  crossorigin="anonymous"></script>
+        <!-- <script type="text/javascript" src="{{ url_for('static', file='js/jquery.datatables-1.10.18.min.js') }}"></script> -->
+        <script type="text/javascript" src="//cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
         <script type="text/javascript" src="{{ url_for('static', file='js/alertify-0.3.17.trunk.js') }}"></script>
         <script type="text/javascript" src="{{ url_for('static', file='js/mx_utils.js') }}"></script>
 
@@ -45,6 +50,7 @@
     {% endmacro %}
 
     <body>
+        <!-- FIXME: can't remove this without breaking, not sure why -->
         <!-- <table class="header-table">
             <thead>
                 <tr>
@@ -93,16 +99,6 @@
         </div>
 
         <div class="container-fluid">
-            {% macro render_td(endpoint, title) %}
-            {%- if endpoint in local.request.path -%}
-            <script type="text/javascript">
-                var active_mx_page = "{{ endpoint|lstrip_slash|safe }}";
-            </script>
-            {% do active_mx_page.append(endpoint|lstrip_slash|safe) %}
-            {% set td_class = 'class="active"' %}
-            {%- endif -%}
-
-            {% endmacro %}
 
             {% block body %}
             {% endblock %}
